# 23-09Harvest

./: Cargo.toml  README.md
00_fps/atomic_fps/: Cargo.toml  ambient.toml
00_fps/atomic_fps/src/: sceneloader.rs  server.rs
00_fps/atomic_fps/src/sceneloader/: scene_mycitytest.rs
00_fps/city_scene/: Cargo.toml  ambient.toml
00_fps/city_scene/assets/: Offworld_Western_Water_tower_01.fbx  Offworld_Western_Water_tower_01_repack.fbx  pipeline.toml
00_fps/city_scene/src/: server.rs
00_fps/front_page_zombie_rush/: Cargo.toml  ambient.toml
00_fps/front_page_zombie_rush/src/: client.rs  sceneloader.rs  server.rs
00_fps/sceneloader_demo/: Cargo.toml  ambient.toml
00_fps/sceneloader_demo/src/: sceneloader.rs  server.rs
00_fps/smartzombie/: Cargo.toml  ambient.toml
00_fps/smartzombie/src/: server.rs
01_nice/foggyday/: Cargo.toml  ambient.toml
01_nice/foggyday/src/: client.rs  server.rs
02_can_has/anim_test/: Cargo.toml  ambient.toml
02_can_has/anim_test/assets/: pipeline.toml
02_can_has/anim_test/src/: server.rs
02_can_has/dinamo/: Cargo.toml  ambient.toml
02_can_has/dinamo/assets/: pipeline.toml
02_can_has/dinamo/src/: server.rs
02_can_has/droqbill/: Cargo.toml  ambient.toml
02_can_has/modelgame/: Cargo.toml  ambient.toml
02_can_has/modelgame/assets/: pipeline.toml
02_can_has/modelgame/src/: server.rs
02_can_has/models/: Cargo.toml  ambient.toml
02_can_has/models/src/: server.rs
02_can_has/space_sound/: Cargo.toml  ambient.toml
02_can_has/space_sound/src/: client.rs  server.rs
02_can_has/test/: Cargo.toml  ambient.toml
03_fogmod/body_heat/: Cargo.toml  ambient.toml
03_fogmod/body_heat/src/: server.rs
03_fogmod/storm_noise/: Cargo.toml  ambient.toml
03_fogmod/storm_noise/src/: client.rs
04_Concepts/valentino/: Cargo.toml  ambient.toml
AmbientGodotSceneEditor/: MyCityTest.tscn  edit_scene_test.tscn  icon.svg.import  project.godot
AmbientGodotSceneEditor/AlexsModels/: four-sided-build.glb.import  four-sided-build_buildside_my_photo.png.import
AmbientGodotSceneEditor/DanMeshes/: MSH_Boat.glb.import  MSH_Building_5x5x10_001.glb.import  MSH_Building_5x5x10_002.glb.import  MSH_Building_5x5x5_001.glb.import  MSH_Building_5x5x5_002.glb.import  MSH_Building_Arch.glb.import  MSH_Building_Arch_Light.glb.import  MSH_Building_Pillar_Lrg_001.glb.import  MSH_Building_Pillar_Sml_001.glb.import  MSH_Building_Roof_001.glb.import  MSH_Building_Seperator.glb  MSH_Building_Seperator.glb.import  MSH_Building_Seperator_001.glb.import  MSH_Building_Wall_Lrg_001.glb.import  MSH_Building_Wall_Lrg_Door_001.glb.import  MSH_Building_Wall_Sml_001.glb.import  MSH_Prop_Crate.glb.import  MSH_Prop_Trashbag.glb.import
AmbientGodotSceneEditor/DanMeshes2/: MSH_Boat.glb.import  MSH_Building_001.glb.import  MSH_Building_001_TX_palette.png.import  MSH_Building_002.glb.import  MSH_Building_002_TX_palette.png.import  MSH_Building_003.glb.import  MSH_Building_003_TX_palette.png.import  MSH_Building_004.glb.import  MSH_Building_004_TX_palette.png.import  MSH_Building_005.glb.import  MSH_Building_005_TX_palette.png.import  MSH_Building_006.glb.import  MSH_Building_006_TX_palette.png.import  MSH_Building_007.glb.import  MSH_Building_007_TX_palette.png.import  MSH_Building_008.glb.import  MSH_Building_008_TX_palette.png.import  MSH_Building_009.glb.import  MSH_Building_009_TX_palette.png.import  MSH_Building_010.glb.import  MSH_Building_010_TX_palette.png.import  MSH_Building_011.glb.import  MSH_Building_011_TX_palette.png.import  MSH_Building_012.glb.import  MSH_Building_012_TX_palette.png.import  MSH_Building_013.glb.import  MSH_Building_013_TX_palette.png.import  MSH_Building_014.glb.import  MSH_Building_014_TX_palette.png.import  MSH_Building_015.glb.import  MSH_Building_015_TX_palette.png.import  MSH_Building_Hole_001.glb.import  MSH_Building_Hole_001_TX_palette.png.import  MSH_Building_Hole_002.glb.import  MSH_Building_Hole_002_TX_palette.png.import  MSH_Building_Hole_003.glb.import  MSH_Building_Hole_003_TX_palette.png.import  MSH_Building_Hole_004.glb.import  MSH_Building_Hole_004_TX_palette.png.import  MSH_Building_Hole_005.glb.import  (+3 more)
Blender Experiments/: ostrich.blend  ostrich_Boned.blend  ostrich_Boned.blend1
Godot3DPractice/01_dans_bldgs/models/: MSH_Building_001.glb.import  MSH_Building_001_TX_Buildings.png.import  MSH_Building_002.glb.import  MSH_Building_002_TX_Buildings.png.import  MSH_Building_003.glb.import  MSH_Building_003_TX_Buildings.png.import  MSH_Building_004.glb.import  MSH_Building_004_TX_Buildings.png.import  MSH_Building_005.glb.import  (+31 more)
Godot3DPractice/02_scene_Pit/: Pit.tscn
Godot3DPractice/03_scene_ExtraDeepPit/: ReallyDeepPit.tscn  ReallyDeepPitForAmbient.tscn  a_chunky_tile.glb.import  really_lumpy_wall.glb.import  really_tall_lumpy_wall.glb.import  tall_noscale.glb.import
Godot3DPractice/04_scene_Underwater/: Underwater.tscn
Godot3DPractice/05_scene_Desert/: Desert.tscn  DesertFluctuatingFog.gd  bad_sand_mat.tres
Godot3DPractice/06_water_city/: water_city.tscn
Godot3DPractice/07_scene_Castle/: Castle.tscn
Godot3DPractice/08_scene_BeachWithLighthouse/: Beach.tscn  CoinScript.gd  beachSand.glb  beachSand.glb.import  beachSandPrefab.tscn  coin_1.tscn  lighthouse.glb.import  lighthouse_0.png.import  lighthouse_1.png.import  lighthouse_2.png.import  lighthouse_coin.wav.import  player_goto.gd  water_material.material
Godot3DPractice/09_scene_MountainTop/: MountainTop.tscn  MountainTop2.tscn
Godot3DPractice/10_scene_InsideTheLighthouse/: InsideTheLighthouse.tscn
Godot3DPractice/11_scene_Lift/: Lift.tscn  elevator.gd
Godot3DPractice/12_scene_SnowstormMaze/: bigquab.glb.import  brokenutilitypole.glb.import  brokenutilitypole_0.png.import  brokenutilitypole_1.png.import  brokenutilitypole_2.png.import  brokenutilitypole_3.png.import  brokenutilitypole_4.png.import  brokenutilitypole_5.png.import  brokenutilitypole_6.png.import  brokenutilitypole_7.png.import  brokenutilitypole_8.png.import  hermaneubis.glb.import  snowstorm_maze.tscn  snowstorm_mounds.tscn  sphere_mesh.tres
nothing/: Cargo.toml  ambient.toml
(+21 files in other folders)
