[workspace]

members = [
  "00_fps/atomic_fps",
  "00_fps/front_page_zombie_rush",
  "00_fps/sceneloader_demo",
  "00_fps/smartzombie",

  "01_nice/foggyday",
  
  "02_can_has/test",
  "02_can_has/modelgame",
  "02_can_has/space_sound",
  "02_can_has/dinamo",
  "02_can_has/anim_test",

  "03_fogmod/storm_noise",
  "03_fogmod/body_heat",

  # "04_Concepts/valentino",
]

[workspace.dependencies]
ambient_api = {git = "https://github.com/AmbientRun/Ambient.git", rev = "3864b39fa95427794aa3167054993cd1b02cf4d6"}
