[workspace]

members = [
  "00_fps/atomic_fps",
  "00_fps/front_page_zombie_rush",
  "00_fps/sceneloader_demo",
  "00_fps/smartzombie",

  "01_nice/foggyday",
  
  "02_can_has/test",
  "02_can_has/modelgame",
  "02_can_has/space_sound",
  "02_can_has/dinamo",
  "02_can_has/anim_test",

  "03_fogmod/storm_noise",
  "03_fogmod/body_heat",

  "nothing",

  # "04_Concepts/valentino",
]
resolver = "2"

[workspace.package]
rust-version = "1.70.0"
version = "0.3.0-dev"

[workspace.dependencies]
ambient_api = { path = "api", version = "0.3.0-dev" }

# [workspace.dependencies]
# ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", tag = "v0.3.0-nightly-2023-09-27" }
