[package]
name = "city_scene"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "3864b39fa95427794aa3167054993cd1b02cf4d6" }

[[bin]]
name = "client_city_scene"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_city_scene"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]