[package]
name = "modelgame"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "f489c778bc0632ff0d7bd80f84fa9a0f35ed9274" }

[[bin]]
name = "client_modelgame"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_modelgame"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]